src/main/java/org/endeavourhealth/imapi/parser/turtle/TurtliteParser.java
// Generated from C:/Users/david/CloudStation/EhealthTrust/DiscoveryDataService/IMAPI/api/src/main/grammars\Turtlite.g4 by ANTLR 4.10.1
package org.endeavourhealth.imapi.parser.turtle;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TurtliteParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
    new PredictionContextCache();
  public static final int
    T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
    T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, NumericLiteral = 14, LINE_COMMENT = 15,
    BooleanLiteral = 16, String = 17, BlankNode = 18, WS = 19, PN_PREFIX = 20, IRIREF = 21,
    PNAME_NS = 22, PrefixedName = 23, PNAME_LN = 24, BLANK_NODE_LABEL = 25, LANGTAG = 26,
    INTEGER = 27, DECIMAL = 28, DOUBLE = 29, EXPONENT = 30, STRING_LITERAL_LONG_SINGLE_QUOTE = 31,
    STRING_LITERAL_LONG_QUOTE = 32, STRING_LITERAL_QUOTE = 33, STRING_LITERAL_SINGLE_QUOTE = 34,
    UCHAR = 35, ECHAR = 36, ANON_WS = 37, ANON = 38, PN_CHARS_BASE = 39, PN_CHARS_U = 40,
    PN_CHARS = 41, PN_LOCAL = 42, PLX = 43, PERCENT = 44, HEX = 45, PN_LOCAL_ESC = 46;
  public static final int
    RULE_turtleDoc = 0, RULE_statement = 1, RULE_directive = 2, RULE_prefixID = 3,
    RULE_base = 4, RULE_sparqlBase = 5, RULE_sparqlPrefix = 6, RULE_triples = 7,
    RULE_predicateObjectList = 8, RULE_objectList = 9, RULE_verb = 10, RULE_subject = 11,
    RULE_predicate = 12, RULE_object = 13, RULE_literal = 14, RULE_blankNodePropertyList = 15,
    RULE_collection = 16, RULE_rdfLiteral = 17, RULE_comment = 18, RULE_iri = 19;

  private static String[] makeRuleNames() {
    return new String[]{
      "turtleDoc", "statement", "directive", "prefixID", "base", "sparqlBase",
      "sparqlPrefix", "triples", "predicateObjectList", "objectList", "verb",
      "subject", "predicate", "object", "literal", "blankNodePropertyList",
      "collection", "rdfLiteral", "comment", "iri"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[]{
      null, "'.'", "'@prefix'", "'@base'", "'BASE'", "'PREFIX'", "';'", "','",
      "'a'", "'['", "']'", "'('", "')'", "'^^'"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[]{
      null, null, null, null, null, null, null, null, null, null, null, null,
      null, null, "NumericLiteral", "LINE_COMMENT", "BooleanLiteral", "String",
      "BlankNode", "WS", "PN_PREFIX", "IRIREF", "PNAME_NS", "PrefixedName",
      "PNAME_LN", "BLANK_NODE_LABEL", "LANGTAG", "INTEGER", "DECIMAL", "DOUBLE",
      "EXPONENT", "STRING_LITERAL_LONG_SINGLE_QUOTE", "STRING_LITERAL_LONG_QUOTE",
      "STRING_LITERAL_QUOTE", "STRING_LITERAL_SINGLE_QUOTE", "UCHAR", "ECHAR",
      "ANON_WS", "ANON", "PN_CHARS_BASE", "PN_CHARS_U", "PN_CHARS", "PN_LOCAL",
      "PLX", "PERCENT", "HEX", "PN_LOCAL_ESC"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "Turtlite.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public TurtliteParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  public static class TurtleDocContext extends ParserRuleContext {
    public List<StatementContext> statement() {
      return getRuleContexts(StatementContext.class);
    }

    public StatementContext statement(int i) {
      return getRuleContext(StatementContext.class, i);
    }

    public TurtleDocContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_turtleDoc;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterTurtleDoc(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitTurtleDoc(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitTurtleDoc(this);
      else return visitor.visitChildren(this);
    }
  }

  public final TurtleDocContext turtleDoc() throws RecognitionException {
    TurtleDocContext _localctx = new TurtleDocContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_turtleDoc);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(43);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__8) | (1L << T__10) | (1L << LINE_COMMENT) | (1L << BlankNode) | (1L << IRIREF) | (1L << PrefixedName))) != 0)) {
          {
            {
              setState(40);
              statement();
            }
          }
          setState(45);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class StatementContext extends ParserRuleContext {
    public DirectiveContext directive() {
      return getRuleContext(DirectiveContext.class, 0);
    }

    public TriplesContext triples() {
      return getRuleContext(TriplesContext.class, 0);
    }

    public CommentContext comment() {
      return getRuleContext(CommentContext.class, 0);
    }

    public StatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_statement;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitStatement(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitStatement(this);
      else return visitor.visitChildren(this);
    }
  }

  public final StatementContext statement() throws RecognitionException {
    StatementContext _localctx = new StatementContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_statement);
    try {
      setState(51);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case T__1:
        case T__2:
        case T__3:
        case T__4:
          enterOuterAlt(_localctx, 1);
        {
          setState(46);
          directive();
        }
        break;
        case T__8:
        case T__10:
        case BlankNode:
        case IRIREF:
        case PrefixedName:
          enterOuterAlt(_localctx, 2);
        {
          setState(47);
          triples();
          setState(48);
          match(T__0);
        }
        break;
        case LINE_COMMENT:
          enterOuterAlt(_localctx, 3);
        {
          setState(50);
          comment();
        }
        break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class DirectiveContext extends ParserRuleContext {
    public PrefixIDContext prefixID() {
      return getRuleContext(PrefixIDContext.class, 0);
    }

    public BaseContext base() {
      return getRuleContext(BaseContext.class, 0);
    }

    public SparqlPrefixContext sparqlPrefix() {
      return getRuleContext(SparqlPrefixContext.class, 0);
    }

    public SparqlBaseContext sparqlBase() {
      return getRuleContext(SparqlBaseContext.class, 0);
    }

    public DirectiveContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_directive;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterDirective(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitDirective(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitDirective(this);
      else return visitor.visitChildren(this);
    }
  }

  public final DirectiveContext directive() throws RecognitionException {
    DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_directive);
    try {
      setState(57);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case T__1:
          enterOuterAlt(_localctx, 1);
        {
          setState(53);
          prefixID();
        }
        break;
        case T__2:
          enterOuterAlt(_localctx, 2);
        {
          setState(54);
          base();
        }
        break;
        case T__4:
          enterOuterAlt(_localctx, 3);
        {
          setState(55);
          sparqlPrefix();
        }
        break;
        case T__3:
          enterOuterAlt(_localctx, 4);
        {
          setState(56);
          sparqlBase();
        }
        break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class PrefixIDContext extends ParserRuleContext {
    public TerminalNode PNAME_NS() {
      return getToken(TurtliteParser.PNAME_NS, 0);
    }

    public TerminalNode IRIREF() {
      return getToken(TurtliteParser.IRIREF, 0);
    }

    public PrefixIDContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_prefixID;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterPrefixID(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitPrefixID(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitPrefixID(this);
      else return visitor.visitChildren(this);
    }
  }

  public final PrefixIDContext prefixID() throws RecognitionException {
    PrefixIDContext _localctx = new PrefixIDContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_prefixID);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(59);
        match(T__1);
        setState(60);
        match(PNAME_NS);
        setState(61);
        match(IRIREF);
        setState(62);
        match(T__0);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class BaseContext extends ParserRuleContext {
    public TerminalNode IRIREF() {
      return getToken(TurtliteParser.IRIREF, 0);
    }

    public BaseContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_base;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterBase(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitBase(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitBase(this);
      else return visitor.visitChildren(this);
    }
  }

  public final BaseContext base() throws RecognitionException {
    BaseContext _localctx = new BaseContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_base);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(64);
        match(T__2);
        setState(65);
        match(IRIREF);
        setState(66);
        match(T__0);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class SparqlBaseContext extends ParserRuleContext {
    public TerminalNode IRIREF() {
      return getToken(TurtliteParser.IRIREF, 0);
    }

    public SparqlBaseContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_sparqlBase;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterSparqlBase(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitSparqlBase(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitSparqlBase(this);
      else return visitor.visitChildren(this);
    }
  }

  public final SparqlBaseContext sparqlBase() throws RecognitionException {
    SparqlBaseContext _localctx = new SparqlBaseContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_sparqlBase);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(68);
        match(T__3);
        setState(69);
        match(IRIREF);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class SparqlPrefixContext extends ParserRuleContext {
    public TerminalNode PNAME_NS() {
      return getToken(TurtliteParser.PNAME_NS, 0);
    }

    public TerminalNode IRIREF() {
      return getToken(TurtliteParser.IRIREF, 0);
    }

    public SparqlPrefixContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_sparqlPrefix;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterSparqlPrefix(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitSparqlPrefix(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitSparqlPrefix(this);
      else return visitor.visitChildren(this);
    }
  }

  public final SparqlPrefixContext sparqlPrefix() throws RecognitionException {
    SparqlPrefixContext _localctx = new SparqlPrefixContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_sparqlPrefix);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(71);
        match(T__4);
        setState(72);
        match(PNAME_NS);
        setState(73);
        match(IRIREF);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class TriplesContext extends ParserRuleContext {
    public SubjectContext subject() {
      return getRuleContext(SubjectContext.class, 0);
    }

    public List<PredicateObjectListContext> predicateObjectList() {
      return getRuleContexts(PredicateObjectListContext.class);
    }

    public PredicateObjectListContext predicateObjectList(int i) {
      return getRuleContext(PredicateObjectListContext.class, i);
    }

    public BlankNodePropertyListContext blankNodePropertyList() {
      return getRuleContext(BlankNodePropertyListContext.class, 0);
    }

    public TriplesContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_triples;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterTriples(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitTriples(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitTriples(this);
      else return visitor.visitChildren(this);
    }
  }

  public final TriplesContext triples() throws RecognitionException {
    TriplesContext _localctx = new TriplesContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_triples);
    int _la;
    try {
      setState(85);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case T__10:
        case BlankNode:
        case IRIREF:
        case PrefixedName:
          enterOuterAlt(_localctx, 1);
        {
          setState(75);
          subject();
          setState(76);
          predicateObjectList();
          setState(81);
          _errHandler.sync(this);
          _la = _input.LA(1);
          while (_la == T__5) {
            {
              {
                setState(77);
                match(T__5);
                setState(78);
                predicateObjectList();
              }
            }
            setState(83);
            _errHandler.sync(this);
            _la = _input.LA(1);
          }
        }
        break;
        case T__8:
          enterOuterAlt(_localctx, 2);
        {
          setState(84);
          blankNodePropertyList();
        }
        break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class PredicateObjectListContext extends ParserRuleContext {
    public VerbContext verb() {
      return getRuleContext(VerbContext.class, 0);
    }

    public ObjectListContext objectList() {
      return getRuleContext(ObjectListContext.class, 0);
    }

    public PredicateObjectListContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_predicateObjectList;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterPredicateObjectList(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitPredicateObjectList(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor)
        return ((TurtliteVisitor<? extends T>) visitor).visitPredicateObjectList(this);
      else return visitor.visitChildren(this);
    }
  }

  public final PredicateObjectListContext predicateObjectList() throws RecognitionException {
    PredicateObjectListContext _localctx = new PredicateObjectListContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_predicateObjectList);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(87);
        verb();
        setState(88);
        objectList();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ObjectListContext extends ParserRuleContext {
    public List<ObjectContext> object() {
      return getRuleContexts(ObjectContext.class);
    }

    public ObjectContext object(int i) {
      return getRuleContext(ObjectContext.class, i);
    }

    public ObjectListContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_objectList;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterObjectList(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitObjectList(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitObjectList(this);
      else return visitor.visitChildren(this);
    }
  }

  public final ObjectListContext objectList() throws RecognitionException {
    ObjectListContext _localctx = new ObjectListContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_objectList);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(90);
        object();
        setState(95);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == T__6) {
          {
            {
              setState(91);
              match(T__6);
              setState(92);
              object();
            }
          }
          setState(97);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class VerbContext extends ParserRuleContext {
    public PredicateContext predicate() {
      return getRuleContext(PredicateContext.class, 0);
    }

    public VerbContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_verb;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterVerb(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitVerb(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitVerb(this);
      else return visitor.visitChildren(this);
    }
  }

  public final VerbContext verb() throws RecognitionException {
    VerbContext _localctx = new VerbContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_verb);
    try {
      setState(100);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case IRIREF:
        case PrefixedName:
          enterOuterAlt(_localctx, 1);
        {
          setState(98);
          predicate();
        }
        break;
        case T__7:
          enterOuterAlt(_localctx, 2);
        {
          setState(99);
          match(T__7);
        }
        break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class SubjectContext extends ParserRuleContext {
    public IriContext iri() {
      return getRuleContext(IriContext.class, 0);
    }

    public TerminalNode BlankNode() {
      return getToken(TurtliteParser.BlankNode, 0);
    }

    public CollectionContext collection() {
      return getRuleContext(CollectionContext.class, 0);
    }

    public SubjectContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_subject;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterSubject(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitSubject(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitSubject(this);
      else return visitor.visitChildren(this);
    }
  }

  public final SubjectContext subject() throws RecognitionException {
    SubjectContext _localctx = new SubjectContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_subject);
    try {
      setState(105);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case IRIREF:
        case PrefixedName:
          enterOuterAlt(_localctx, 1);
        {
          setState(102);
          iri();
        }
        break;
        case BlankNode:
          enterOuterAlt(_localctx, 2);
        {
          setState(103);
          match(BlankNode);
        }
        break;
        case T__10:
          enterOuterAlt(_localctx, 3);
        {
          setState(104);
          collection();
        }
        break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class PredicateContext extends ParserRuleContext {
    public IriContext iri() {
      return getRuleContext(IriContext.class, 0);
    }

    public PredicateContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_predicate;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).enterPredicate(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TurtliteListener) ((TurtliteListener) listener).exitPredicate(this);
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof TurtliteVisitor) return ((TurtliteVisitor<? extends T>) visitor).visitPredicate(this);
      else return visitor.visitChildren(this);
    }
  }
